# Cpp_design_patterns

./: CMakeLists.txt  README.md  bridge.cpp  builder.cpp  class_design.cpp  decorator.cpp  external_polymorphism.cpp  factory_method.cpp  factory_simple.cpp  flyweight.cpp  functional.cpp  observer.cpp  pimpl.cpp  prototype.cpp  proxy.cpp  singleton.cpp  templates.cpp  type_erasure.cpp  visitor_classic.cpp  visitor_modern.cpp
